force-app/main/default/objects/FrameWorkTest__c/FrameWorkTest__c.object-meta.xml
<CustomObject>
    <label>FrameWorkTest</label>
    <nameField>
        <label>FrameWorkTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FrameWorkTest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>