force-app/main/default/objects/FrameWorkTest__c/fields/Handler_Event__c.field-meta.xml
<CustomField>
    <fullName>Handler_Event__c</fullName>
    <label>Handler Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>