force-app/main/default/objects/FrameWorkTest__c/fields/Handler_Ordinal__c.field-meta.xml
<CustomField>
    <fullName>Handler_Ordinal__c</fullName>
    <label>Handler Ordinal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>