force-app/main/default/objects/FrameWorkTest__c/fields/Initiating_Object__c.field-meta.xml
<CustomField>
    <fullName>Initiating_Object__c</fullName>
    <label>Initiating Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>